# slowutils

./: README.md  install.sh  setup.cfg
src/: abolish.py  dog.py  isthatme.py  kitty.py  no.py  yeah.py
src/python-coreutils/: dog  smack
src/python_coreutils/: dog  smack
src/python_coreutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/slowutils/: abolish  dog  isthatme  smack  yeah
