[metadata]
name = python-coreutils
description = GNU coreutils rewritten in python
author = John Crawford
license = GPL3
license_files = ['LICENSE']
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = 
    python-coreutils
package_dir = 
    =src
zip_safe = False
scripts = 
    src/python-coreutils/dog
    src/python-coreutils/abolish
    src/python-coreutils/yeah
    src/python-coreutils/isthatme
    src/python-coreutils/smack
