[metadata]
name = python_coreutils
description = GNU coreutils rewritten in python
author = John Crawford
license = GPL3
license_files = ['LICENSE']
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = 
    python_coreutils
package_dir = 
    =src
zip_safe = False
scripts = 
    src/python_coreutils/dog
    src/python_coreutils/abolish
    src/python_coreutils/yeah
    src/python_coreutils/isthatme
    src/python_coreutils/smack
