[metadata]
name = slowutils
description = GNU coreutils rewritten in python
author = John Crawford
license = WTFPL
license_files = ['LICENSE']
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = 
    slowutils
package_dir = 
    =src
zip_safe = False
scripts = 
    src/slowutils/dog
    src/slowutils/abolish
    src/slowutils/yeah
    src/slowutils/isthatme
    src/slowutils/smack
